baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__array_rest_binding_with_suffix_slices_middle.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
assertion_line: 490
---
fn user.f(xs: int[]) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int[] // xs // param
    let _2: bool
    let _3: int
    let _4: bool
    let _5: int
    let _6: int
    let _7: int
    let _8: int
    let _9: int
    let _10: int // a
    let _11: int[]
    let _12: int
    let _13: int
    let _14: int[] // r
    let _15: int
    let _16: int
    let _17: int
    let _18: int // z
    let _19: int
    let _20: int
    let _21: int
    let _22: int

    bb0: {
        _2 = is_type(copy _1, _[]);
        branch copy _2 -> [bb1, bb2];
    }

    bb1: {
        _3 = len(_1);
        _4 = copy _3 >= const 2_i64;
        branch copy _4 -> [bb3, bb2];
    }

    bb2: {
        _0 = const 0_i64;
        goto -> bb8;
    }

    bb3: {
        _5 = const 0_i64;
        goto -> bb4;
    }

    bb4: {
        _6 = len(_1);
        _7 = copy _6 - const 1_i64;
        goto -> bb5;
    }

    bb5: {
        _8 = const 0_i64;
        _9 = copy _1[_8];
        _10 = copy _9;
        _12 = len(_1);
        _13 = copy _12 - const 1_i64;
        _11 = call const fn baml.Array.slice(copy _1, const 1_i64, copy _13) -> [bb6];
    }

    bb6: {
        _14 = copy _11;
        _15 = len(_1);
        _16 = copy _15 - const 1_i64;
        _17 = copy _1[_16];
        _18 = copy _17;
        _20 = len(_14);
        goto -> bb7;
    }

    bb7: {
        _21 = copy _10;
        _19 = copy _20 + copy _21;
        _22 = copy _18;
        _0 = copy _19 + copy _22;
        goto -> bb8;
    }

    bb8: {
        return;
    }
}
