baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__if_else.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn f(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: bool
    let _3: int
    let _4: 0

    bb0: {
        _3 = copy _1;
        _4 = const 0_i64;
        _2 = copy _3 > copy _4;
        branch copy _2 -> [bb2, bb3];
    }

    bb1: {
        return;
    }

    bb2: {
        _0 = const "positive";
        goto -> bb5;
    }

    bb3: {
        _0 = const "non-positive";
        goto -> bb6;
    }

    bb4: {
        goto -> bb1;
    }

    bb5: {
        return;
    }

    bb6: {
        return;
    }
}
