baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__let_binding.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn f(x: int) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x // param
    let _2: int // y

    bb0: {
        _2 = copy _1 + const 1_i64;
        _0 = copy _2;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
