baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__literal_return.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn f() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        _0 = const 42_i64;
        goto -> bb2;
    }

    bb1: {
        return;
    }

    bb2: {
        return;
    }
}
