baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__match_expr.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn f(x: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // x // param
    let _2: void
    let _3: null

    bb0: {
        _3 = call const fn baml.sys.panic(const "parse error") -> [bb2];
    }

    bb1: {
        return;
    }

    bb2: {
        unreachable;
    }

    bb3: {
        unreachable;
    }

    bb4: {
        goto -> bb5;
    }

    bb5: {
        return;
    }
}
