baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__match_or_mixed_array_class_binding_uses_branch_local_rest_type.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.f(v: NumberBag | int[][]) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: NumberBag | int[][] // v // param
    let _2: bool
    let _3: int[]
    let _4: bool
    let _5: int[]
    let _6: int[] // field
    let _7: int[]
    let _8: 0
    let _9: bool
    let _10: int
    let _11: bool
    let _12: int
    let _13: int[]
    let _14: bool
    let _15: bool
    let _16: int
    let _17: bool
    let _18: int[]
    let _19: int
    let _20: bool
    let _21: int[][]
    let _22: int
    let _23: int
    let _24: int[]
    let _25: int[]
    let _26: int
    let _27: int[] // field
    let _28: int[][]
    let _29: int
    let _30: int[]
    let _31: 0

    bb0: {
        _2 = is_type(copy _1, NumberBag);
        branch copy _2 -> [bb1, bb2];
    }

    bb1: {
        _3 = copy _1.0;
        _4 = is_type(copy _3, int[]);
        branch copy _4 -> [bb14, bb2];
    }

    bb2: {
        _9 = is_type(copy _1, int[][]);
        branch copy _9 -> [bb3, bb9];
    }

    bb3: {
        _10 = len(_1);
        _11 = copy _10 >= const 1_i64;
        branch copy _11 -> [bb4, bb9];
    }

    bb4: {
        _12 = const 0_i64;
        _13 = copy _1[_12];
        _14 = is_type(copy _13, int[]);
        branch copy _14 -> [bb5, bb9];
    }

    bb5: {
        _15 = is_type(copy _13, int[]);
        branch copy _15 -> [bb6, bb9];
    }

    bb6: {
        _16 = len(_13);
        _17 = copy _16 >= const 0_i64;
        branch copy _17 -> [bb7, bb9];
    }

    bb7: {
        _19 = len(_13);
        _18 = call const fn baml.Array.slice(copy _13, const 0_i64, copy _19) -> [bb8];
    }

    bb8: {
        _20 = is_type(copy _18, int[]);
        branch copy _20 -> [bb10, bb9];
    }

    bb9: {
        _0 = const 0_i64;
        goto -> bb15;
    }

    bb10: {
        _22 = len(_1);
        _21 = call const fn baml.Array.slice(copy _1, const 1_i64, copy _22) -> [bb11];
    }

    bb11: {
        _23 = const 0_i64;
        _24 = copy _1[_23];
        _26 = len(_24);
        _25 = call const fn baml.Array.slice(copy _24, const 0_i64, copy _26) -> [bb12];
    }

    bb12: {
        _27 = copy _25;
        _29 = len(_1);
        _28 = call const fn baml.Array.slice(copy _1, const 1_i64, copy _29) -> [bb13];
    }

    bb13: {
        _30 = copy _27;
        _31 = const 0_i64;
        _0 = copy _30[_31];
        goto -> bb15;
    }

    bb14: {
        _5 = copy _1.0;
        _6 = copy _5;
        _7 = copy _6;
        _8 = const 0_i64;
        _0 = copy _7[_8];
        goto -> bb15;
    }

    bb15: {
        return;
    }
}
