baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__mounted_loc_free_runtime_call_target_is_explicit.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.f(t: reflect.Type, value: unknown) -> unknown {
    // Locals:
    let _0: unknown // _0 // return
    let _1: reflect.Type // t // param
    let _2: unknown // value // param
    let _3: reflect.Type

    bb0: {
        bind_type(0, [Copy(Local(Local(1)))]);
        _3 = load_type(#0);
        _0 = call const fn app.accept<copy _3>(copy _2; runtime_type_check) -> [bb1];
    }

    bb1: {
        return;
    }
}
