baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__nested_runtime_type_atoms_bind_slots_before_loading_templates.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn user.erase() -> string {
    // Locals:
    let _0: string // _0 // return

    bb0: {
        _0 = const "ok";
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.f(t: reflect.Type, value: unknown) -> bool {
    // Locals:
    let _0: bool // _0 // return
    let _1: reflect.Type // t // param
    let _2: unknown // value // param
    let _3: reflect.Type
    let _4: bool
    let _5: bool
    let _6: bool
    let _7: bool
    let _8: bool
    let _9: bool
    let _10: string
    let _11: reflect.Type
    let _12: bool
    let _13: bool

    bb0: {
        bind_type(0, [Copy(Local(Local(1)))]);
        _3 = load_type(Wrapper<#0>);
        bind_type(5, [Copy(Local(Local(3)))]);
        bind_type(4, [Copy(Local(Local(1)))]);
        bind_type(1, [Copy(Local(Local(1)))]);
        _11 = load_type(Wrapper<#1>);
        _10 = call const fn user.erase<copy _11>(; runtime_type_check) -> [bb1];
    }

    bb1: {
        _9 = copy _10 == const "ok";
        _8 = short_circuit(&&) copy _9 -> [eval: bb2, join: bb3];
    }

    bb2: {
        _8 = call const fn baml.ops.equals_equals(const null, const null) -> [bb3];
    }

    bb3: {
        _7 = copy _8;
        _6 = short_circuit(&&) copy _7 -> [eval: bb4, join: bb5];
    }

    bb4: {
        bind_type(3, [Copy(Local(Local(1)))]);
        _12 = is_type(copy _2, Wrapper<#3>);
        _6 = copy _12;
        goto -> bb5;
    }

    bb5: {
        _5 = copy _6;
        _4 = short_circuit(&&) copy _5 -> [eval: bb6, join: bb7];
    }

    bb6: {
        bind_type(2, [Copy(Local(Local(1)))]);
        _13 = is_type(copy _2, Wrapper<#2>);
        _4 = copy _13;
        goto -> bb7;
    }

    bb7: {
        _0 = copy _4;
        goto -> bb8;
    }

    bb8: {
        return;
    }
}
