baml_language/crates/baml_tests/snapshots/compiler2_mir/baml_tests__compiler2_mir__object_construction.snap
---
source: crates/baml_tests/src/compiler2_mir/mod.rs
---
fn f() -> Point {
    // Locals:
    let _0: Point // _0 // return
    let _1: 1
    let _2: 2

    bb0: {
        _1 = const 1_i64;
        _2 = const 2_i64;
        _0 = Point { copy _1, copy _2 };
        goto -> bb2;
    }

    bb1: {
        return;
    }

    bb2: {
        return;
    }
}
